Add mood selection feature to diary app
Added a mood selection dropdown to the diary app.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     </div>
 
     <p id="currentDate"></p>
+    <label for="mood">Today's Mood:</label>
+    <select id="mood">
+    <option value="Happy 😄">Happy 😄</option>
+    <option value="Sad 😢">Sad 😢</option>
+    <option value="Angry 😤">Angry 😤</option>
+    <option value="Productive 💪">Productive 💪</option>
+    <option value="Calm 🌿">Calm 🌿</option>
+</select>
 
     <textarea id="diaryText" placeholder="Aaj ka din kaisa tha... likh do yaha ✨"></textarea>
     
